[package]
name = "dap-dau-vao-tuong"
version = "0.1.0"
edition = "2024"

[dependencies]
poise = { git = "https://github.com/serenity-rs/poise", branch = "current"}
tokio = { version = "1.45.1", features = ["rt-multi-thread"] }
tracing-subscriber = "0.3.19"
dotenv = "0.15"
rand = "0.8"
diesel = { version = "2.3", features = ["sqlite", "returning_clauses_for_sqlite_3_35", "chrono"] }
diesel_migrations = "2.3"
chrono = "0.4"